--- a/src/app/components/search-input/search-input.component.html
+++ b/src/app/components/search-input/search-input.component.html
@@ -5,7 +5,7 @@
      [class.search-input--disabled]="disabled">
   
   <div class="search-input__icon">
-    🔍
+    <i class="bi bi-search"></i>
   </div>
   
   <input 
@@ -22,7 +22,7 @@
       class="search-input__clear"
       type="button"
       (click)="onClear()">
-      ✕
+      <i class="bi bi-x"></i>
     </button>
   }
 </div>
