--- a/src/app/pages/alarms/alarms.component.html
+++ b/src/app/pages/alarms/alarms.component.html
@@ -66,6 +66,15 @@
           </app-data-table>
         </div>
 
+        <!-- Alarm Modal -->
+        <app-alarm-modal
+          [isOpen]="isModalOpen"
+          [mode]="modalMode"
+          [initialData]="initialAlarmData"
+          (close)="onModalClose()"
+          (save)="onAlarmSave($event)">
+        </app-alarm-modal>
+
       </app-card>
     </div>
   </main>
