--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -65,7 +65,7 @@
           </app-button>
 
           <app-button
-            text="▶️ Iniciar Tutorial"
+            text="▶ Iniciar Tutorial"
             variant="outline"
             size="medium"
             class="tutorial-button"
